#1094 PROMS: fix footer on mobile on slider page
The footer was displayed over the slider

--- a/rdrf/rdrf/frontend/src/index.css
+++ b/rdrf/rdrf/frontend/src/index.css
@@ -19,3 +19,34 @@ code {
 .navigationinputs .progress {
   background-color: #aeaeae;
 }
+
+#root {
+  height: 100%;
+}
+
+.App {
+  
+    width: 100%;
+    height: 100%;
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    
+    align-items: stretch;
+   
+}
+
+.container {
+  flex-shrink: 0;
+  height: auto;
+}
+
+.footer {
+  flex-shrink: 1;
+  position: inherit;
+}
+
+body, html {
+  height:100%
+}
